Added Photos controller to upload photos using Cloudinary

--- a/DatingApp.WebAPI/appsettings.json
+++ b/DatingApp.WebAPI/appsettings.json
@@ -11,5 +11,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "cloudName": "dsnxqyrgf",
+    "apiKey": "954266258695215",
+    "apiSecret": "TBvlKX9k3k3C1-g6bulVtwcB8cU"
+  }
 }
